--- a/BNMPCITC(Club Class Tutorial Website)/style.css
+++ b/BNMPCITC(Club Class Tutorial Website)/style.css
@@ -3,7 +3,7 @@
     padding: 0;
 }
 
-body { background-color: #303030; }
+body { background-color: #00FFFF; }
 
 header {
     position: fixed;
@@ -15,7 +15,7 @@ header {
 header h1 {
     position: relative;
     font-family: 'Arvo';
-    color: #FFFFFF;
+    color: #000080;
     left: 0;
     top: 50%;
     margin-top: -15px;
